generate frames from helper functions, abandon deep-dup, use proper request/response headers (#143)

--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -19,6 +19,9 @@ Metrics/BlockNesting:
 Metrics/ClassLength:
   Max: 325
 
+Metrics/ModuleLength:
+  Max: 120
+
 # Offense count: 12
 Metrics/CyclomaticComplexity:
   Max: 60
