--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -13,6 +13,8 @@ Metrics/AbcSize:
 # Offense count: 16
 Metrics/BlockNesting:
   Max: 5
+  Exclude:
+    - 'lib/http/2/connection.rb'
 
 # Offense count: 5
 # Configuration parameters: CountComments.
