Fix example code, remove rails method (#148)
* Fix example code, remove rails method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,7 @@ AllCops:
 Layout/IndentHeredoc:
   Exclude:
     - 'lib/tasks/generate_huffman_table.rb'
+    - 'example/*'
 
 Metrics/LineLength:
   Max: 120
