--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -14,7 +14,7 @@ Metrics/AbcSize:
 Metrics/BlockNesting:
   Max: 5
   Exclude:
-    - "lib/http/2/connection.rb"
+    - "lib/http/2/next/connection.rb"
 
 # Offense count: 5
 # Configuration parameters: CountComments.
