--- a/.rubocop-2.3.yml
+++ b/.rubocop-2.3.yml
@@ -18,5 +18,11 @@ Naming/MethodParameterName:
 Layout/LineLength:
   Max: 128
 
-Style/BracesAroundHashParameters:
-  Enabled: false
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
