--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,14 @@ cache:
     - vendor/ruby
     - vendor/jruby
 
+variables:
+  BUNDLE_JOBS: 10
+  BUNDLE_PATH: vendor
+  CI: 1
+
 .before_script: &before_script
   - ruby -v
-  - bundle install -j 4 --path vendor
+  - bundle install
 
 .test: &test
 - bundle exec rake
@@ -15,7 +20,6 @@ cache:
 
 jruby:
   variables:
-    CI: 1
     JRUBY_OPTS: "--debug"
   before_script: *before_script
   image: "jruby:9.2.9"
@@ -25,8 +29,6 @@ jruby:
     paths:
       - coverage
 ruby21:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -37,8 +39,6 @@ ruby21:
     paths:
       - coverage
 ruby22:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -48,8 +48,6 @@ ruby22:
   script:
     - *test
 ruby23:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -59,8 +57,6 @@ ruby23:
   script:
     - *test
 ruby24:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -70,8 +66,6 @@ ruby24:
   script:
     - *test
 ruby25:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -81,8 +75,6 @@ ruby25:
   script:
     - *test
 ruby26:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -92,8 +84,6 @@ ruby26:
   script:
     - *test
 ruby27:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
@@ -104,8 +94,6 @@ ruby27:
     paths:
       - coverage
 ruby30:
-  variables:
-    CI: 1
   before_script:
     - apk --update add g++ make
     - *before_script
