added ruby 3.0 job in CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,8 +95,13 @@ ruby27:
       - coverage
 ruby30:
   before_script:
-    - apk --update add g++ make
+    - apk --update add g++ make git
     - *before_script
+    - export RUBYOPT="-rbundler/setup -rrbs/test/setup"
+    - export RBS_TEST_RAISE="true"
+    - export RBS_TEST_LOGLEVEL="error"
+    - export RBS_TEST_OPT="-Isig"
+    - export RBS_TEST_TARGET="HTTP2Next*"
   image: "ruby:3.0-rc-alpine"
   script:
     - *test
