again the rubocop rules...

--- a/.rubocop-2.1.yml
+++ b/.rubocop-2.1.yml
@@ -7,6 +7,9 @@ Style/RedundantFreeze:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/AndOr:
+  Enabled: false
+
 Layout/IndentHeredoc:
   Enabled: false
 
