--- a/.rubocop-2.3.yml
+++ b/.rubocop-2.3.yml
@@ -4,6 +4,9 @@ inherit_from: .rubocop.yml
 Style/HashSyntax:
   Enabled: false
 
+Style/AndOr:
+  Enabled: false
+
 Style/SafeNavigation:
   Enabled: false
 
