--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,7 @@
 inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 2.4
+  TargetRubyVersion: 2.7
   DisplayCopNames: true
   Exclude:
     - "bin/**"
@@ -25,4 +25,69 @@ Gemspec/RequiredRubyVersion:
   Enabled: false
 
 Bundler/DuplicatedGem:
+  Enabled: false
+
+Style/OptionalBooleanParameter:
+  Enabled: false
+
+Gemspec/RequiredRubyVersion:
+  Enabled: false
+
+Lint/MissingSuper:
+  Exclude:
+    - 'lib/httpx/io/unix.rb'
+
+Style/HashTransformValues:
+  Exclude:
+    - 'lib/httpx/plugins/digest_authentication.rb'
+
+Lint/ConstantDefinitionInBlock:
+  Exclude:
+    - 'spec/**/*'
+
+# TODO: remove this if min supported version of ruby is 2.3
+Style/HashSyntax:
+  Enabled: false
+
+Style/AndOr:
+  Enabled: false
+
+Style/SafeNavigation:
+  Enabled: false
+
+Layout/HeredocIndentation:
+  Exclude:
+    - "lib/tasks/generate_huffman_table.rb"
+    - "example/*"
+
+Naming/MethodParameterName:
+  Enabled: false
+
+Naming/VariableNumber:
+  Exclude:
+    - example/server.rb
+
+Layout/LineLength:
+  Max: 128
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/CommentAnnotation:
+  Enabled: false
+
+Style/HashTransformValues:
+  Enabled: true
+
+Style/SlicingWithRange:
+  Enabled: false
+
+Lint/SuppressedException:
+  Exclude:
+    - Rakefile
+
+RescueEnsureAlignment:
   Enabled: false
