--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ jruby:
     paths:
       - coverage
 truffleruby:
+  allow_failure: true
   before_script:
     - *before_script
   image: "ghcr.io/graalvm/truffleruby:latest"
